# aoc20XX

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
python/: genday.py  genday.sh  pyproject.toml  test_template.py
